Ensure border for highlighted region doesn't overlap other lines
[Fixes #84]

--- a/styles/highlight-selected.less
+++ b/styles/highlight-selected.less
@@ -12,10 +12,8 @@
 
   .highlights {
     .highlight-selected .region {
-      border-radius: 2px;
-      box-sizing: content-box;
-      padding: 0 1px 0 0;
-      margin: -1px 0 0 -1px;
+      border-radius: 3px;
+      box-sizing: border-box;
       background-color: transparent;
       border-width: 1px;
       border-style: solid;
